// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer - EmailSerializer should align heading correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <h1
    style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
  >
    Plain Heading
  </h1>
  <div
    style="width: 100%;text-align: center;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with center alignment
    </h1>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <h1
      style=",
  font-size: 2.0714285714285716em;
  font-style: inherit;
  line-height: 1.103448275862069;
, color: ,function (props) {
    var theme = (0, _getTheme.default)(props);
    return modes[theme.mode];
  },;
  font-weight: 600;
  letter-spacing: -0.01em;
  margin-top: ,40,px;"
    >
      Heading with end alignment
    </h1>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should align paragraph correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <p
    style="white-space: pre-wrap;word-wrap: break-word;"
  >
    Plain Paragraph
  </p>
  <div
    style="width: 100%;text-align: center;"
  >
    <p
      style="white-space: pre-wrap;word-wrap: break-word;"
    >
      Paragraph with center alignment
    </p>
  </div>
  <div
    style="width: 100%;text-align: right;"
  >
    <p
      style="white-space: pre-wrap;word-wrap: break-word;"
    >
      Paragraph with end alignment
    </p>
  </div>
</div>
`;

exports[`Renderer - EmailSerializer should inline code properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <code
    style="background: rgb(244, 245, 247);color: rgb(23, 43, 77);border-radius: 3px;padding: 2px 4px;font-size: 12px;line-height: 24px;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
  >
    const foo = bar();
  </code>
</div>
`;

exports[`Renderer - EmailSerializer should inline text properties correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <p
    style="white-space: pre-wrap;word-wrap: break-word;"
  >
    foo
  </p>
</div>
`;

exports[`Renderer - EmailSerializer should render codeblock correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <pre
    style="background: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;margin: 0px;"
  >
    <table
      style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
    >
      <tbody>
        <tr>
          <td
            style="padding: 8px 16px;background-color: rgb(244, 245, 247);border-radius: 3px;-webkit-border-radius: 3px;-moz-border-radius: 3px;font-size: 12px;line-height: 20px;color: rgb(23, 43, 77);"
          >
            <code
              style="color: rgb(23, 43, 77);display: block;font-size: 12px;line-height: 20px;white-space: pre;font-family: 'SFMono-Medium', 'SF Mono', 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Mono', Menlo, Consolas, Courier, monospace;"
            >
              // Create a map.
final IntIntOpenHashMap map = new IntIntOpenHashMap();
map.put(1, 2);
map.put(2, 5);
map.put(3, 10);
int count = map.forEach(new IntIntProcedure()
{
   int count;
   public void apply(int key, int value)
   {
       if (value &gt;= 5) count++;
   }
}).count;
System.out.println("There are " + count + " values &gt;= 5");
            </code>
          </td>
        </tr>
      </tbody>
    </table>
  </pre>
</div>
`;

exports[`Renderer - EmailSerializer should render link 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <a
    href="https://www.atlassian.com"
    style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
  >
    Hello, world!
  </a>
</div>
`;

exports[`Renderer - EmailSerializer should render paragraph with indentations 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 30px;"
        >
          <p
            style="white-space: pre-wrap;word-wrap: break-word;"
          >
            Paragraph with 1 level of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 60px;"
        >
          <p
            style="white-space: pre-wrap;word-wrap: break-word;"
          >
            Paragraph with 2 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 90px;"
        >
          <p
            style="white-space: pre-wrap;word-wrap: break-word;"
          >
            Paragraph with 3 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 120px;"
        >
          <p
            style="white-space: pre-wrap;word-wrap: break-word;"
          >
            Paragraph with 4 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 150px;"
        >
          <p
            style="white-space: pre-wrap;word-wrap: break-word;"
          >
            Paragraph with 5 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
  <table
    style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;margin: 0px;padding: 0px;border-spacing: 0px;"
  >
    <tbody>
      <tr>
        <td
          style="padding-left: 180px;"
        >
          <p
            style="white-space: pre-wrap;word-wrap: break-word;"
          >
            Paragraph with 6 levels of indentation
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Renderer - EmailSerializer should render text with em inside of a paragraph correctly 1`] = `
<div
  style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;font-size: 14;font-weight: 400;line-height: 24px;"
>
  <p
    style="white-space: pre-wrap;word-wrap: break-word;"
  >
    <a
      href="https://www.atlassian.com"
      style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
    >
      Hello, 
    </a>
    <span
      style="font-weight: bold;"
    >
      <a
        href="https://www.atlassian.com"
        style="border: none;background: transparent;color: #0052cc;text-decoration: none;"
      >
        World!
      </a>
    </span>
     Look I can do 
    <span
      style="font-style: italic;"
    >
      italic 
    </span>
    <span
      style="font-weight: bold;"
    >
      <span
        style="font-style: italic;"
      >
        , strong 
      </span>
    </span>
    <span
      style="text-decoration: underline;"
    >
      <span
        style="font-weight: bold;"
      >
        <span
          style="font-style: italic;"
        >
          and underlined text!
        </span>
      </span>
    </span>
  </p>
</div>
`;
